sonnenauf- und untergänge hingefügt

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -37,6 +37,59 @@
 				<canvas id="rainChart" width="400" height="200"></canvas>
 			</div>
 		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<h3>Sonnenauf- und Untergang für den <u>{{date}}</u></h3>
+				<br />
+				<table class="table table-condensed">
+					<tr>
+						<td><strong>Astronomische Morgendämmerung:</strong></td>
+						<td>{{astronomicalDawn}} Uhr</td>
+						<td>{{astronomicalDawn_diff}}</td>
+					</tr>
+					<tr>
+						<td><strong>Nautische Morgendämmerung:</strong></td>
+						<td>{{nauticalDawn}} Uhr</td>
+						<td>{{nauticalDawn_diff}}</td>
+					</tr>
+					<tr>
+						<td><strong>Zivile Morgendämmerung:</strong></td>
+						<td>{{civilDawn}} Uhr</td>
+						<td>{{civilDawn_diff}}</td>
+					</tr>
+					<tr>
+						<td><strong>Sonnenaufgang endet:</strong></td>
+						<td>{{sunrise}} Uhr</td>
+						<td>{{sunrise_diff}}</td>
+					</tr>
+					<tr>
+						<td><strong>Sonnenhöchststand:</strong></td>
+						<td>{{solarNoon}} Uhr</td>
+						<td>{{solarNoon_diff}}</td>
+					</tr>
+					<tr>
+						<td><strong>Abenddämmerung beginnt:</strong></td>
+						<td>{{sunset}} Uhr</td>
+						<td>{{sunset_diff}}</td>
+					</tr>
+					<tr>
+						<td><strong>Zivile Abenddämmerung:</strong></td>
+						<td>{{nauticalDusk}} Uhr</td>
+						<td>{{nauticalDusk_diff}}</td>
+					</tr>
+					<tr>
+						<td><strong>Nautische Abenddämmerung:</strong></td>
+						<td>{{nauticalDusk}} Uhr</td>
+						<td>{{nauticalDusk_diff}}</td>
+					</tr>
+					<tr>
+						<td><strong>Astronomische Abenddämmerung:</strong></td>
+						<td>{{astronomicalDusk}} Uhr</td>
+						<td>{{astronomicalDusk_diff}}</td>
+					</tr>
+				</table>
+			</div>
+		</div>
 	</div>
 	<!-- Optional JavaScript -->
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
