fix relative time formatting for sunrise/sunset

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -68,7 +68,7 @@
 						<td>{{solarNoon_diff}}</td>
 					</tr>
 					<tr>
-						<td><strong>Abenddämmerung beginnt:</strong></td>
+						<td><strong>Sonnenuntergang beginnt:</strong></td>
 						<td>{{sunset}} Uhr</td>
 						<td>{{sunset_diff}}</td>
 					</tr>
