--- a/views/index.mustache
+++ b/views/index.mustache
@@ -39,7 +39,7 @@
 		</div>
 		<div class="row">
 			<div class="col-lg-12">
-				<h3>Sonnenauf- und Untergang für den <u>{{date}}</u></h3>
+				<h3>{{{sunsetHeader}}}</h3>
 				<br />
 				<table class="table table-condensed">
 					<tr>
