--- a/views/index.mustache
+++ b/views/index.mustache
@@ -5,52 +5,71 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+
 <!-- Bootstrap CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+<link rel="stylesheet" href="/styles/anemo.css">
+
 <title>WHW/SVH Anemometer</title>
 </head>
-<body>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <h1>Aktuelle Windlage im Netzgut B&uuml;ro<h1>
-      </div>
-      <div class="col-sm-12">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Black_Left_Arrow.png" id="windvane" width="100" style="transition: transform 0.5s; margin: 50px;"/>
-      </div>
-      <div class="col-sm-12">
-        <h3 id="windspeed"></h3>
-      </div>
-      <div class="col-sm-12">
-        <h4 id="rain"></h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12 col-md-6 col-lg-6">
-        <canvas id="anemoChart" width="400" height="200"></canvas>
-      </div>
-      <div class="col-sm-12 col-md-6 col-lg-6">
-        <canvas id="vaneChart" width="400" height="200"></canvas>
-      </div>
-      <div class="col-sm-12 col-md-6 col-lg-6">
-        <canvas id="rainChart" width="400" height="200"></canvas>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-12">
-        {{> sunset}}
-      </div>
-    </div>
-  </div>
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js" integrity="sha256-N4u5BjTLNwmGul6RgLoESPNqDFVUibVuOYhP4gJgrew=" crossorigin="anonymous"></script>
-  <script src="static/bundle.js"></script>
+<header>
+  <nav>
+    <ul>
+      <li><span>Home</span></li>
+      <li><a href="#anemo">Aktuelles Wetter</a></li>
+      <li><a href="#vorhersage">Vorhersage</a></li>
+      <li><a href="#sunset">Sonnenaufgang</a></li>
+    </ul>
+  </nav>
+</header>
+
+<body>
+	<div class="container">
+		<div id="anemo" class="row">
+			<div class="col-sm-12">
+				<h1>Aktuelle Windlage im Netzgut B&uuml;ro<h1>
+			</div>
+			<div class="col-sm-12">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Black_Left_Arrow.png" id="windvane" width="100" style="transition: transform 0.5s; margin: 50px;"/>
+			</div>
+			<div class="col-sm-12">
+				<h3 id="windspeed"></h3>
+			</div>
+			<div class="col-sm-12">
+				<h4 id="rain"></h4>
+			</div>
+		</div>
+  	<div class="row">
+			<div class="col-sm-12 col-md-6 col-lg-6">
+				<canvas id="anemoChart" width="400" height="200"></canvas>
+			</div>
+			<div class="col-sm-12 col-md-6 col-lg-6">
+				<canvas id="vaneChart" width="400" height="200"></canvas>
+			</div>
+			<div class="col-sm-12 col-md-6 col-lg-6">
+				<canvas id="rainChart" width="400" height="200"></canvas>
+			</div>
+		</div>
+
+    <div id="vorhersage"></div>
+
+		<div id="sunset" class="row">
+			<div class="col-lg-12">
+				{{> partials/sunset}}
+			</div>
+		</div>
+	</div>
+
+	<!-- Optional JavaScript -->
+	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+	<script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js" integrity="sha256-N4u5BjTLNwmGul6RgLoESPNqDFVUibVuOYhP4gJgrew=" crossorigin="anonymous"></script>
+	<script src="static/bundle.js"></script>
+
 </body>
 
 </html>
