Kleine Änderung in partials

--- a/views/partials/sunset.mustache
+++ b/views/partials/sunset.mustache
@@ -1,49 +1,67 @@
-	<h3>{{{sunsetHeader}}}</h3>
-				<br />
-        <table class="table table-condensed">
-					<tr>
-						<td><strong>Astronomische Morgendämmerung:</strong></td>
-						<td>{{astronomicalDawn}} Uhr</td>
-						<td>{{astronomicalDawn_diff}}</td>
-					</tr>
-					<tr>
-						<td><strong>Nautische Morgendämmerung:</strong></td>
-						<td>{{nauticalDawn}} Uhr</td>
-						<td>{{nauticalDawn_diff}}</td>
-					</tr>
-					<tr>
-						<td><strong>Zivile Morgendämmerung:</strong></td>
-						<td>{{civilDawn}} Uhr</td>
-						<td>{{civilDawn_diff}}</td>
-					</tr>
-					<tr>
-						<td><strong>Sonnenaufgang endet:</strong></td>
-						<td>{{sunrise}} Uhr</td>
-						<td>{{sunrise_diff}}</td>
-					</tr>
-					<tr>
-						<td><strong>Sonnenhöchststand:</strong></td>
-						<td>{{solarNoon}} Uhr</td>
-						<td>{{solarNoon_diff}}</td>
-					</tr>
-					<tr>
-						<td><strong>Sonnenuntergang beginnt:</strong></td>
-						<td>{{sunset}} Uhr</td>
-						<td>{{sunset_diff}}</td>
-					</tr>
-					<tr>
-						<td><strong>Zivile Abenddämmerung:</strong></td>
-						<td>{{nauticalDusk}} Uhr</td>
-						<td>{{nauticalDusk_diff}}</td>
-					</tr>
-					<tr>
-						<td><strong>Nautische Abenddämmerung:</strong></td>
-						<td>{{nauticalDusk}} Uhr</td>
-						<td>{{nauticalDusk_diff}}</td>
-					</tr>
-					<tr>
-						<td><strong>Astronomische Abenddämmerung:</strong></td>
-						<td>{{astronomicalDusk}} Uhr</td>
-						<td>{{astronomicalDusk_diff}}</td>
-					</tr>
-				</table>
+<h3>{{{sunsetHeader}}}</h3>
+<br />
+<table class="table table-condensed">
+  <tr>
+    <td>
+      <strong>Astronomische Morgendämmerung:</strong>
+    </td>
+    <td>{{astronomicalDawn}} Uhr</td>
+    <td>{{astronomicalDawn_diff}}</td>
+  </tr>
+  <tr>
+    <td>
+      <strong>Nautische Morgendämmerung:</strong>
+    </td>
+    <td>{{nauticalDawn}} Uhr</td>
+    <td>{{nauticalDawn_diff}}</td>
+  </tr>
+  <tr>
+    <td>
+      <strong>Zivile Morgendämmerung:</strong>
+    </td>
+    <td>{{civilDawn}} Uhr</td>
+    <td>{{civilDawn_diff}}</td>
+  </tr>
+  <tr>
+    <td>
+      <strong>Sonnenaufgang endet:</strong>
+    </td>
+    <td>{{sunrise}} Uhr</td>
+    <td>{{sunrise_diff}}</td>
+  </tr>
+  <tr>
+    <td>
+      <strong>Sonnenhöchststand:</strong>
+    </td>
+    <td>{{solarNoon}} Uhr</td>
+    <td>{{solarNoon_diff}}</td>
+  </tr>
+  <tr>
+    <td>
+      <strong>Sonnenuntergang beginnt:</strong>
+    </td>
+    <td>{{sunset}} Uhr</td>
+    <td>{{sunset_diff}}</td>
+  </tr>
+  <tr>
+    <td>
+      <strong>Zivile Abenddämmerung:</strong>
+    </td>
+    <td>{{nauticalDusk}} Uhr</td>
+    <td>{{nauticalDusk_diff}}</td>
+  </tr>
+  <tr>
+    <td>
+      <strong>Nautische Abenddämmerung:</strong>
+    </td>
+    <td>{{nauticalDusk}} Uhr</td>
+    <td>{{nauticalDusk_diff}}</td>
+  </tr>
+  <tr>
+    <td>
+      <strong>Astronomische Abenddämmerung:</strong>
+    </td>
+    <td>{{astronomicalDusk}} Uhr</td>
+    <td>{{astronomicalDusk_diff}}</td>
+  </tr>
+</table>
