Added statistics toggler and changed name

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -52,7 +52,7 @@
       {{> partials/forecast}}
     </div>
 
-    <div id="sunset" class="row">
+    <div id="sunset" class="row sunset">
       <div class="col-lg-12">
         {{> partials/sunset}}
       </div>
