--- a/public/styles/anemo.css
+++ b/public/styles/anemo.css
@@ -3,9 +3,16 @@ header {
 }
 
 nav {
-  display: flex;
-  flex: 100%;
-  height: 25px;
+  background-color: lightgray;
+  top:0;
+  width: 100%;
+  transition:all 0.5s;
+  position: relative;
+  z-index: 1;
+}
+
+body.fixed-nav nav {
+  position: fixed;
 }
 
 nav ul {
@@ -23,4 +30,10 @@ nav li {
 
 div.hidediv {
   display: none
+}
+
+.sunset {
+  background-color: rgb(242, 242, 242);
+  margin: 5px;
+  border-radius: 8px;
 }
