Korrektur der Schreibfehler richtig ist (der SVH, zunehmend)

--- a/views/partials/anemo.mustache
+++ b/views/partials/anemo.mustache
@@ -1,5 +1,5 @@
 <div class="col-sm-12">
-  <h1>Aktuelle Windlage am Steg des SVH Heidelberg
+  <h1>Aktuelle Windlage am Steg der SVH Heidelberg
     <h1>
 </div>
 
