--- a/views/partials/anemo.mustache
+++ b/views/partials/anemo.mustache
@@ -3,8 +3,11 @@
     <h1>
 </div>
 
-<div class="col-sm-12">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Black_Left_Arrow.png" id="windvane" width="100" style="transition: transform 0.5s; margin: 50px;" />
+<div id="tendency-rose" class="col-sm-12invalidiert">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Black_Left_Arrow.png" id="windvane" width="100" style="transition: transform 0.5s;
+    position: relative;
+    bottom: 20px;
+    left: -50px;" />
 </div>
 <div class="col-sm-12">
   <h3 id="windspeed"></h3>
