--- a/public/styles/anemo.css
+++ b/public/styles/anemo.css
@@ -51,3 +51,8 @@ div.hidediv {
   margin: 5px;
   border-radius: 8px;
 }
+
+/* initially hide the extended sunset infos */
+.fn-extended-sunset {
+  display: none;
+}
