--- a/views/partials/anemo.mustache
+++ b/views/partials/anemo.mustache
@@ -18,16 +18,18 @@
 </div>
 -->
 <!--/div>-->
-<div class="row">
-  <div class="col-sm-12 col-md-6 col-lg-6">
-    <canvas id="anemoChart" width="400" height="200"></canvas>
+<div class="col-sm-12">
+  <div class="row">
+    <div class="col-sm-12 col-md-6 col-lg-6" style="position: relative">
+      <canvas id="anemoChart"></canvas>
+    </div>
+    <div class="col-sm-12 col-md-6 col-lg-6" style="position: relative">
+      <canvas id="vaneChart"></canvas>
+    </div>
+    <!--
+    <div class="col-sm-12 col-md-6 col-lg-6">
+      <canvas id="rainChart" width="400" height="200"></canvas>
+    </div>
+    -->
   </div>
-  <div class="col-sm-12 col-md-6 col-lg-6">
-    <canvas id="vaneChart" width="400" height="200"></canvas>
-  </div>
-  <!--
-  <div class="col-sm-12 col-md-6 col-lg-6">
-    <canvas id="rainChart" width="400" height="200"></canvas>
-  </div>
-  -->
 </div>
