add wind direction indicator

--- a/views/partials/anemo.mustache
+++ b/views/partials/anemo.mustache
@@ -9,6 +9,7 @@
     bottom: 20px;
     left: -50px;" />
 </div>
+  <div class="col-sm-12" id="windvane-label"></div>
 <div class="col-sm-12">
   <h3 id="windspeed"></h3>
 </div>
