Beschriftung Toggle Button für Sonnenaufgang

--- a/views/partials/sunset.mustache
+++ b/views/partials/sunset.mustache
@@ -65,8 +65,8 @@
     <td>{{astronomicalDusk_diff}}</td>
   </tr>
   <tr>
-   <td colspan="3">
-    <a href="#" id="toggle-extended-sunset" class="btn btn-primary" data-toggle="button">Erweiterte Infos</a>
-   </td>
+    <td colspan="3">
+      <a href="#" id="toggle-extended-sunset" class="btn btn-primary" data-toggle="button">Erweiterte Infos anzeigen</a>
+    </td>
   </tr>
 </table>
