Neutrale Textanpassungen, Verbesserung Responsive bei Drehen von Mobilesd

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -40,7 +40,7 @@
 </header>
 
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <div id="anemo" class="row sunset">
       {{> partials/anemo}}
     </div>
@@ -49,7 +49,7 @@
       {{> partials/statistics}}
     </div>
 
-    <div id="vorhersage" class="hidediv">
+    <div id="vorhersage" class="row hidediv">
       {{> partials/forecast}}
     </div>
 
@@ -59,6 +59,9 @@
       </div>
     </div>
   </div>
+  <footer>
+    * Ein Gemeinschaftsprojekt der SVH und des WHW
+  </footer>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
