--- a/views/partials/anemo.mustache
+++ b/views/partials/anemo.mustache
@@ -1,17 +1,21 @@
 <div class="col-sm-12">
-  <h1>Aktuelle Windlage am Steg der SVH Heidelberg
-    <h1>
+  <h2>Wetterdaten für Wassersportler in HD
+    <sup>*</sup>
+  </h2>
+
 </div>
 
-<div id="tendency-rose" class="col-sm-12invalidiert">
+<div id="tendency-rose">
   <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Black_Left_Arrow.png" id="windvane" width="100" style="transition: transform 0.5s;
     position: relative;
     bottom: 20px;
     left: -50px;" />
 </div>
-  <div class="col-sm-12" id="windvane-label"></div>
-<div class="col-sm-12">
-  <h3 id="windspeed"></h3>
+<div>
+  <div class="col-md-4" id="windvane-label"></div>
+  <div class="col-md-8">
+    <h3 id="windspeed"></h3>
+  </div>
 </div>
 <!--
 <div class="col-sm-12">
