--- a/views/partials/anemo.mustache
+++ b/views/partials/anemo.mustache
@@ -2,7 +2,6 @@
   <h2>Wetterdaten für Wassersportler in HD
     <sup>*</sup>
   </h2>
-
 </div>
 
 <div id="tendency-rose">
@@ -11,9 +10,10 @@
     bottom: 20px;
     left: -50px;" />
 </div>
-<div>
-  <div class="col-md-4" id="windvane-label"></div>
-  <div class="col-md-8">
+
+<div class="col-sm-12">
+  <div class="col-sm-2" id="windvane-label"></div>
+  <div class="col-sm-8">
     <h3 id="windspeed"></h3>
   </div>
 </div>
