Feature: Bewertung der Windstärke , Ausgabe von Winddrehen

--- a/views/partials/anemo.mustache
+++ b/views/partials/anemo.mustache
@@ -4,17 +4,29 @@
   </h2>
 </div>
 
-<div id="tendency-rose">
-  <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Black_Left_Arrow.png" id="windvane" width="100" style="transition: transform 0.5s;
+<div class="col-sm-12">
+  <div class="row">
+    <div id="tendency-rose">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7e/Black_Left_Arrow.png" id="windvane" width="100" style="transition: transform 2s;
     position: relative;
     bottom: 20px;
     left: -50px;" />
-</div>
+    </div>
+    <div style="margin-left:5px">
+      <!--<div class="col-sm-1" id="windvane-label"></div>
+      -->
+      <div>
+        <h4 id="winddir"></h4>
+      </div>
 
-<div class="col-sm-12">
-  <div class="col-sm-2" id="windvane-label"></div>
-  <div class="col-sm-8">
-    <h3 id="windspeed"></h3>
+      <div>
+        <h4 id="windspeed"></h4>
+      </div>
+      <div>
+        <h4 id="windspeedComment"></h4>
+      </div>
+    </div>
+
   </div>
 </div>
 <!--
