Verbesserung; Transition der Rotation mit 3 Sekunden nun länger (als die Ankunft von Messwerten im Regelfall). Dadurch entsteht der EIndruck, dass die WIndrose sich gleichmäßiger und wie in Öl gebremst dreht.

--- a/public/styles/anemo.css
+++ b/public/styles/anemo.css
@@ -44,6 +44,7 @@ div.hidediv {
   border-top-right-radius: 60px;
   border-bottom-left-radius: 60px;
   border-bottom-right-radius: 60px;
+  transition: ease-in-out 3s;
 }
 
 .sunset {
