--- a/views/index.mustache
+++ b/views/index.mustache
@@ -10,6 +10,8 @@
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
+
+
   <link rel="stylesheet" href="/public/styles/anemo.css">
 
   <title>WHW/SVH Anemometer</title>
@@ -45,7 +47,7 @@
       {{> partials/anemo}}
     </div>
 
-    <div id="statistics" class="row hidediv">
+    <div id="statistics" class="row sunset hidediv">
       {{> partials/statistics}}
     </div>
 
