--- a/views/partials/statistics.mustache
+++ b/views/partials/statistics.mustache
@@ -1,4 +1,11 @@
-<h3>Windstatistiken</h3>
-<div class="col-sm-12 col-md-6 col-lg-6">
-  <canvas id="anemoChart" width="400" height="200"></canvas>
+<div class="col-sm-12">
+  <h3>Windstatistiken</h3>
+
+  <div id="windstatistics" class="col-sm-12">
+    <div class="row">
+      <div class="col-sm-12 col-md-6 col-lg-6" style="position: relative">
+        <canvas id="windstats"></canvas>
+      </div>
+    </div>
+  </div>
 </div>
