changes to layout of wind statistics page

--- a/views/index.mustache
+++ b/views/index.mustache
@@ -47,7 +47,7 @@
       {{> partials/anemo}}
     </div>
 
-    <div id="statistics" class="row sunset hidediv">
+    <div id="statistics" class="row sunset ">
       {{> partials/statistics}}
     </div>
 
