--- a/views/partials/statistics.mustache
+++ b/views/partials/statistics.mustache
@@ -3,9 +3,17 @@
 
   <div id="windstatistics" class="col-sm-12">
     <div class="row">
+
+
+      <div class="col-sm-12 col-md-6 col-lg-6" style="position: relative">
+        <canvas id="windspeedstats"></canvas>
+      </div>
+
       <div class="col-sm-12 col-md-6 col-lg-6" style="position: relative">
         <canvas id="windstats"></canvas>
       </div>
+
+
     </div>
   </div>
 </div>
